workspace = { members = ["docs"] }
[package]
name = "falsefox"
description = "Packatge experiment for falsefox"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"
authors = ["falsefox <https://falsefox.dev>"]
homepage = "https://github.com/false-fox/falsefox-crate"
repository = "https://github.com/false-fox/falsefox-crate"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/prelude.rs"
crate-type = ["lib"]
[dependencies]
